          (diewald)
        - Add panel types. (diewald)
        - Add textSigle as a plugin receivable information. (diewald)
        - Introduce krill-indexer command via plugin. (diewald)
        - Introduce start-with-backend command via plugin. (diewald)
        - Update Mojolicious for security reasons. (diewald)
        - Fix terser installation (fixes #182). (diewald)

        WARNING: Mojolicious 9.31 is a security update -
          updating is highly recommended.

0.47 2022-11-22
        - Add command to generate super_client_info file. (diewald)
        - Support 'client_file' parameter as an alternative to 'client_id'
          and 'client_secret'. (diewald)

0.46 2022-08-08
        - Increased max query length from 1000 to 4096 characters. (kupietz)
        - Fix handling of public clients. (diewald)
        - Improve support for non-latin tokens in annotation table views.
          (Fixes #168; diewald)

0.45 2022-05-20
        - Added confidential client support to OAuth. (diewald)
        - Added OAuth client authorization handling. (diewald)
        - Mark public clients as slightly more insecure. (diewald)
        - Reintroduce email handle support. (fixes #165; diewald)
        - Support plugin declarations on registration. (diewald)
        - Fetch client information before grant request. (diewald)
        - Enable Zooming on mobile clients. (diewald)
        - Auth Plugin sets cookie expiration explicitely
          to 3 days. (diewald)
        - Remove JWT Auth flow, which was deprecated since 0.42.
          (diewald)

0.44 2022-02-31
        - Fixed autosecrets migration. (diewald)
        - Format page numbers in pagination. (diewald)
        - Introduce tei2korapxml command via plugin. (diewald)
        - Introduce korapxml2tei command via plugin. (diewald)
        - Plugin toggle states are now managed by the state
          manager and can therefore survive URL changes. (diewald)
        - Add KorAP::XML::Krill and KorAP::XML::TEI to